# done

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  run.sh
docs/: agents-md.md  compress-aware.md  debugging.md  hooks.md  jobs-walkthrough.md  jobs.md  learning-log.md  memory.md  personas.md  proxy.md  review.md  router-flows.md  tui-snapshot-testing.md
docs/adr/: 0001-stream-painter-keeps-redundant-block-placement-signals.md
examples/sample-repo/: README.md  calculator.py
harness/: acp_agent.py  acp_emit.py  acp_env.py  acp_main.py  acp_session.py  agent_build.py  agents.py  base_prompt.py  chat_handler.py  compaction.py  compress_cli.py  config.py  debug_flag.py  debug_trace.py  events.py  flows.py  goal_gate.py  goal_reviewer.py  history_view.py  hooks.py  instance_templates.py  interruptible.py  logging_setup.py  memory.py  model_availability.py  model_catalog.py  model_ids.py  model_keys.py  model_resolve.py  paths.py  permcheck.py  persona.py  persona_config.py  persona_select.py  persona_sessions.py  prompt.py  prompt_hash.py  proxy.py  relay_emitter.py  review.py  (+12 more)
harness/compress/: auto_regen.py  engine.py  loader.py  regen_worker.py  rules.py  sibling.py  skill_cache.py  targets.py  validate.py
harness/data/: models_snapshot.json
harness/jobs/: __init__.py  cli.py  commands.py  create.py  cron_main.py  daemon.py  executor.py  heartbeat.py  lock.py  model.py  ops.py  paths.py  prompt_state.py  service.py  service_launchd.py  service_systemd.py  store.py  supervisor.py  view.py
harness/output_filters/: __init__.py  dispatch.py  pytest_filter.py
harness/proxy_service/: auto_install.py  binary.py  cli.py  config_gen.py  download.py  lifecycle.py  login.py  management.py  model_map.py  paths.py  providers.py  service_launchd.py  service_systemd.py
harness/skills/: NOTICE.md
harness/tools/: base.py  bash.py  create_job.py  create_loop.py  create_persona.py  edit.py  load_memory.py  load_skill.py  read.py  registry.py  review.py  set_next_run.py  subagent.py  subagent_prompt.py  worker_collector.py  write.py
harness/tui/: app.py  app.tcss  client.py  clipboard.py  commands.py  fmt.py  header.py  logo.py  messages.py  model_picker.py  render.py  roster.py  state.py  stream_painter.py  theme.py  tokens.py  wordmark.py
scripts/: gen_logo.py  repro_header_e_mark.py  smoke-wheel.sh
skills/git-pr-flow/: SKILL.md
skills/python-testing/: SKILL.md
tests/: conftest.py  fake_agent.py  test_acp_agent.py  test_acp_agent_streaming.py  test_acp_clarify_decision.py  test_acp_emit.py  test_acp_emit_plan.py  test_acp_env.py  test_acp_history_boundary.py  test_acp_main.py  test_acp_main_factory.py  test_acp_perm_decision.py  test_acp_sdk_contract.py  test_acp_session.py  test_acp_session_context.py  test_acp_smoke.py  test_acp_tool_call_ids.py  test_agent_build.py  test_agent_dashboard.py  test_agent_rail.py  test_agents.py  test_base_prompt.py  test_chat_handler.py  test_clipboard.py  test_compaction.py  test_compaction_integration.py  test_compose_turn.py  test_config.py  test_config_roles_preserve.py  test_create_persona_tool.py  test_ctx_bar.py  test_debug_flag.py  test_debug_trace.py  test_dn_cron_routing.py  test_dn_proxy_routing.py  test_events.py  test_fake_agent.py  test_first_run_service_prompt.py  test_flows.py  test_goal_extmethod.py  (+119 more)
tests/compress/: test_auto_regen.py  test_cli.py  test_engine.py  test_loader.py  test_memory_write.py  test_regen_worker.py  test_rules.py  test_sibling.py  test_skill_cache.py  test_skill_compose_cache.py  test_targets.py  test_validate.py  test_wiring.py
tests/jobs/: test_create_job_extmethod.py  test_create_job_live.py  test_create_job_skill.py  test_create_job_tool.py  test_cron_cli.py  test_cron_dashboard.py  test_cron_detail.py  test_cron_drawer_mount.py  test_cron_main.py  test_daemon.py  test_daemon_dynamic.py  test_executor.py  test_executor_budget.py  test_executor_compose.py  test_executor_override.py  test_executor_permission_gate.py  test_executor_persona_stamp.py  test_heartbeat.py  test_lock.py  test_model.py  test_model_dynamic.py  test_next_run.py  test_ops.py  test_ops_dynamic.py  test_paths.py  test_prompt_state.py  test_service.py  test_service_launchd.py  test_service_systemd.py  test_store.py  test_supervisor.py
tests/proxy_service/: test_auto_install.py  test_model_map.py
tests/skills/: test_discovery_wave_skill.py
tests/tools/: test_create_loop.py  (+4 more)
trace/: __init__.py  acp_agent.py  acp_emit.py  acp_env.py  acp_main.py  chat_handler.py  events.py  models_mock.py  router.py  run_traced.py  runner.py  tracing_agent.py  tui_main.py
upstream/: UPSTREAM_VERSION
(+212 files in other folders)
