[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quiubo-done"
version = "0.5.0"
description = "DoneDone — a coding agent you drive from your terminal (dn) or editor over the Agent Client Protocol; built on a vendored mini-swe-agent with a router, skills layer, and tracer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
dependencies = [
    "mini-swe-agent",            # the vendored engine (see [tool.uv.sources] below)
    "agent-client-protocol>=0.10.1,<0.11",
    "textual>=8,<9",
    "python-dotenv>=1",
    "pyyaml>=6",
    "python-frontmatter>=1",
    "litellm>=1.75.5",
]

[project.optional-dependencies]
# Developer tooling. `textual-dev` provides `textual console` (live TUI log
# redirect) — pairs with the --debug trace file (see docs/debugging.md).
dev = [
    "textual-dev>=1.7",
]

[project.scripts]
# Type `dn` from any directory to launch the Textual ACP client (the TUI).
# It operates on YOUR current working directory as the project.
# (Named `dn` rather than `done` — `done` is a zsh reserved keyword and can't be
# used as a command.)
dn = "harness.tui_main:main"
# The raw ACP agent server (for editor clients like Zed); also used internally
# by the TUI, which launches it via `python -m harness.acp_main`.
dn-agent = "harness.acp_main:main"

# The engine is the vendored, unmodified mini-swe-agent under upstream/. We
# install it as a real, editable dependency instead of sys.path-hacking it —
# this is what lets `import minisweagent` work in any environment the harness is
# installed into (editable .venv or a global `uv tool install`), while keeping
# the zero-upstream-edits constraint (uv installs it in place from the path).
[tool.uv.sources]
mini-swe-agent = { path = "upstream", editable = false }

# The harness lives in the `harness` package and its subpackages (e.g.
# `harness.tui`, `harness.tui.widgets`). upstream/ is NOT part of this package —
# it's a separate dependency declared above. (The package was renamed from
# `trace`, which shadowed Python's stdlib `trace` module and broke imports for
# an installed console script.)
[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
# skills/ and the .tcss stylesheets are resolved at runtime via __file__, so they
# must ship inside the wheel for a non-editable install to find them.
"harness" = ["skills/**/*", "templates/**/*"]
"harness.tui" = ["*.tcss"]
